Ensure accessibility updates get sent when a window is transformed

When an aura Window receives a new transform, it possibly impacts its bounds. Previously, we were only observing OnWindowBoundsChanged, which does not get called for transform changes.

This change makes it so we also observe OnWindowTransformed and fire a location change to push the new location to all accessibility clients.

Bug: 842868
Change-Id: I5251198da8b4af6cb96ad3197a6d37caa0a37faa
Reviewed-on: https://chromium-review.googlesource.com/1195645
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587237}
Former-commit-id: 7d715073832c03ad7eeca5bc939241287f5e627f